staff branch html finished

--- a/src/main/resources/template/searchBook.html
+++ b/src/main/resources/template/searchBook.html
@@ -15,7 +15,7 @@
 <body onload="closeNav()">
 
 <form action="">
-    <label for="books">Choose a type:</label>
+    <label for="books" style="color: white">Choose a type:</label>
     <select name="books" id="books">
         <option value="Book ID">Book ID</option>
         <option value="ISBN">ISBN</option>
