--- a/src/main/resources/template/staffChangePassword.html
+++ b/src/main/resources/template/staffChangePassword.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>student_menu</title>
+    <title>Borrow Book</title>
     <style>
         .container {
             display: grid;
@@ -36,6 +36,7 @@
             border: none;
             color: white;
             padding: 15px 32px;
+            font-family: sans-serif;
             text-align: right;
             text-decoration: none;
             font-size: 16px;
@@ -46,13 +47,6 @@
             right:1rem;
         }
 
-        /*        .accountInfo a {
-                    color: black;
-                    position: absolute;
-                    top:1rem;
-                    right:1rem;
-                    cursor: pointer;
-                }*/
 
         .crossButton a {
             padding: 8px 8px 8px 32px;
@@ -61,6 +55,7 @@
             color: #818181;
             display: block;
             transition: 0.3s;
+            cursor: pointer;
         }
 
         .logout a{
@@ -72,30 +67,45 @@
             transition: 0.3s;
         }
 
-        .account a:hover {
-            color: #f1f1f1;
-        }
-
-
-        .serviceOption a {
-            display: block;
-            color: #ffffff;
-            padding: 14px;
-            text-decoration: none;
-            font-size: 17px;
-            border-radius: 5px;
-            text-align:center
-        }
-
-        .serviceOption a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
 
         #header {
             transition: margin-left .5s;
             padding: 16px;
+        }
+
+        .returnToMenu {
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: right;
+            text-decoration: none;
+            font-size: 16px;
+            margin: 2rem 2rem;
+            cursor: pointer;
+        }
+
+        form.step2 {
+            border:white;
+            margin:3rem;
+        }
+
+        .pass_box{
+            border:black;
+            margin:1rem;
+            text-align: right;}
+
+        iframe {
+            width: 80%;
+            height: 20rem;
+            margin: 3rem 3rem;
+        }
+
+        label{
+            width: 200px;
+            text-align: right;
+            display: inline-block;
+            color: white;
         }
 
     </style>
@@ -103,23 +113,33 @@
 <body onload="closeNav()">
 <div class="container">
     <div id="header" class="topOfThePage">
-        <h2 style="text-align:left; margin:2%; color:white">Home (Stuff)</h2>
+        <h2 style="text-align:left; margin:2%; color:white">Change password</h2>
         <button class="accountButton" onclick="openNav()">&#9776; Account</button>
     </div>
     <div id="account" class="accountInfo">
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
         <h5>Username:</h5> <p>admin</p>
         <h5>User Type:</h5> <p>stuff</p>
-        <h5>Credit Score:</h5> <p>100</p>
-        <button id="logout" onclick="logout()">Log out</button>
+        <a id="logout" onclick="logout()">Log out</a>
     </div>
-    <div class="menu serviceOption">
-        <a href="#">Return Book</a>
-        <a href="#">Add new Book</a>
-        <a href="#">Change student password</a>
-        <a href="#">change my password</a>
+
+    <div class="menu">
+        <form class="step2">
+            <label for="old_password">Please input your old password:</label>
+            <input class="pass_box" type="text" id="old_password" name="old_password"><br><br>
+            <label for="new_password">Please input your new password:</label>
+            <input class="pass_box" type="text" id="new_password" name="new_password"><br><br>
+            <label for="confirm_password">Please confirm your new password:</label>
+            <input class="pass_box" type="text" id="confirm_password" name="new_password">
+            <input id="change_password" name="change" type="button" value="change">
+        </form>
+
+
     </div>
-    <div class="messages" id="message"></div>
+
+    <div class="messages" id="message">
+        <button id="returnToMenu" class="returnToMenu" onclick="goToMenu()">Go Back To Menu</button>
+    </div>
 
 
 </div>
@@ -142,4 +162,10 @@
     function logout() {
         location.href = "login.html"
     }
+
+    function goToMenu() {
+        location.href = "staffMenu.html"
+    }
+
+
 </script>
