staff branch html finished

--- a/src/main/resources/template/changeStudentPassword.html
+++ b/src/main/resources/template/changeStudentPassword.html
@@ -84,16 +84,7 @@
             margin: 2rem 2rem;
             cursor: pointer;
         }
-
-        form.step2 {
-            border:white;
-            margin:3rem;
-        }
-
-        .pass_box{
-            border:black;
-            margin:1rem;
-            text-align: right;}
+        
 
         iframe {
             width: 80%;
@@ -124,15 +115,10 @@
     </div>
 
     <div class="menu">
-        <form class="step2">
-            <label for="old_password">Please input your old password:</label>
-            <input class="pass_box" type="text" id="old_password" name="old_password"><br><br>
-            <label for="new_password">Please input your new password:</label>
-            <input class="pass_box" type="text" id="new_password" name="new_password"><br><br>
-            <label for="confirm_password">Please confirm your new password:</label>
-            <input class="pass_box" type="text" id="confirm_password" name="new_password">
-            <input id="change_password" name="change" type="button" value="change">
-        </form>
+        <label for="userName">Username:</label>
+        <input name="userName" id="userName" type="text" value="">
+        <button id="submit" class="submit" onclick="temPassword()">Get Temporary Password</button>
+        <p id="hidden_message" style="color: white; margin: 3rem 3rem;" ></p>
 
 
     </div>
@@ -167,5 +153,8 @@
         location.href = "staffMenu.html"
     }
 
-
+    function temPassword(){
+        document.getElementById("hidden_message").innerHTML="Temporary Password: _________" +
+            "Please copy it to the students and ask them to reset it on their device"
+    }
 </script>
