--- a/src/main/resources/template/staffMenu.html
+++ b/src/main/resources/template/staffMenu.html
@@ -101,14 +101,13 @@
     <div id="account" class="accountInfo">
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
         <h5>Username:</h5> <p>admin</p>
-        <h5>User Type:</h5> <p>stuff</p>
-        <h5>Credit Score:</h5> <p>100</p>
+        <h5>User Type:</h5> <p>staff</p>
         <button id="logout" onclick="logout()">Log out</button>
     </div>
     <div class="menu serviceOption">
         <a href="staffReturnBook.html">Return Book</a>
         <a href="addBook.html">Add new Book</a>
-        <a href="#">Change student password</a>
+        <a href="changeStudentPassword.html">Change student password</a>
         <a href="staffChangePassword.html">Change my password</a>
     </div>
     <div class="messages" id="message"></div>
