--- a/src/main/resources/template/addBook.html
+++ b/src/main/resources/template/addBook.html
@@ -115,7 +115,7 @@
     <div id="account" class="accountInfo">
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
         <h5>Username:</h5> <p>admin</p>
-        <h5>User Type:</h5> <p>stuff</p>
+        <h5>User Type:</h5> <p>staff</p>
         <a id="logout" onclick="logout()">Log out</a>
     </div>
 
