--- a/src/main/resources/template/staffReturnBook.html
+++ b/src/main/resources/template/staffReturnBook.html
@@ -105,8 +105,7 @@
     <div id="account" class="accountInfo">
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
         <h5>Username:</h5> <p>admin</p>
-        <h5>User Type:</h5> <p>stuff</p>
-        <h5>Credit Score:</h5> <p>100</p>
+        <h5>User Type:</h5> <p>staff</p>
         <button id="logout" onclick="logout()">Log out</button>
     </div>
     <div class="menu">
