changed UserLoginManager.java constructor parameters

--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -123,7 +123,7 @@
         <form name=type>
             <label for="books">Choose a type:</label>
             <select name="books" id="books">
-                <option id="Book" value="Book">Book</option>
+                <!--<option id="Book" value="Book">Book</option>-->
                 <option value="Dictionary">Dictionary</option>
                 <option value="Literature">Literature</option>
                 <option value="Magazine">Magazine</option>
