changed the href way and connected them to the controller. one issue posted on git regarding the create new user parameter to be solved

--- a/src/main/resources/templates/staffMenu.html
+++ b/src/main/resources/templates/staffMenu.html
@@ -109,7 +109,7 @@
         <a href="addBook.html">Add new Book</a>
         <a href="changeStudentPassword.html">Change student password</a>
         <a href="staffChangePassword.html">Change my password</a>
-        <a href="createNewUser.html">Create New User</a>
+        <a th:href="@{~/create}">Create New User</a>
     </div>
     <div class="messages" id="message"></div>
 
