--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
   <input  type="radio" id="user_type_student" value="student" name="user_type">
   <label for="user_type_student"> Student</label><br>
   <input type="radio" id="user_type_staff" name="user_type" value="staff">
-  <label for="user_type_staff"> Staff</label><br>
+  <label for="user_type_staff"> Staff</label><br>+
   <label for="username">Username:</label><br>
   <input  type="text" id="username" name="username"><br>
   <label for="pwd">Password:</label><br>
