--- a/src/main/resources/templates/student_change_password.html
+++ b/src/main/resources/templates/student_change_password.html
@@ -111,6 +111,7 @@
     </style>
 </head>
 <body onload="closeNav()">
+<form th:action="@{/changeStudentPassword}" th:method="POST">
 <div class="container">
     <div id="header" class="topOfThePage">
         <h2 style="text-align:left; margin:2%; color:white">Change password</h2>
@@ -132,7 +133,7 @@
             <label for="new_password">Please input your new password:</label>
             <input class="pass_box" type="text" id="new_password" name="new_password"><br><br>
             <label for="confirm_password">Please confirm your new password:</label>
-            <input class="pass_box" type="text" id="confirm_password" name="new_password">
+            <input class="pass_box" type="text" id="confirm_password" name="new_password2">
             <input id="change_password" name="change" type="button" value="change">
         </form>
 
@@ -140,6 +141,7 @@
     </div>
 
     <div class="messages" id="message">
+        <p class="b" th:text="*{message}" id="sen"></p>
         <button id="returnToMenu" class="returnToMenu" onclick="goToMenu()">Go Back To Menu</button>
     </div>
 
