just some non-significant stuff done. fixed couple small errors and typo

--- a/src/main/resources/templates/changeStudentPassword.html
+++ b/src/main/resources/templates/changeStudentPassword.html
@@ -115,15 +115,16 @@
     </div>
 
     <div class="menu">
+        <form th:action="@{/changeOtherPwd}" th:method="POST">
         <label for="userName">Username:</label>
         <input name="userName" id="userName" type="text" value="">
         <button id="submit" class="submit" onclick="temPassword()">Get Temporary Password</button>
-        <p id="hidden_message" style="color: white; margin: 3rem 3rem;" ></p>
-
+        </form>
 
     </div>
 
     <div class="messages" id="message">
+        <p class="b" th:text="*{message}" id="sen"></p>
         <button id="returnToMenu" class="returnToMenu" onclick="goToMenu()">Go Back To Menu</button>
     </div>
 
