implemented changeStudentPwdController.java, this is the controller for the staff to be able to change student's password.

--- a/src/main/resources/templates/changeStudentPassword.html
+++ b/src/main/resources/templates/changeStudentPassword.html
@@ -99,6 +99,12 @@
             color: white;
         }
 
+        #me {
+            font-size: 16px;
+            text-align: center;
+            color: white;
+        }
+
     </style>
 </head>
 <body onload="closeNav()">
@@ -124,7 +130,7 @@
     </div>
 
     <div class="messages" id="message">
-        <p class="b" th:text="*{message}" id="sen"></p>
+        <p class="b" th:text="*{message}" id="me"></p>
         <button id="returnToMenu" class="returnToMenu" onclick="goToMenu()">Go Back To Menu</button>
     </div>
 
