--- a/src/main/resources/templates/staffMenu.html
+++ b/src/main/resources/templates/staffMenu.html
@@ -107,7 +107,7 @@
     <div class="menu serviceOption">
         <a href="staffReturnBook.html">Return Book</a>
         <a href="addBook.html">Add new Book</a>
-        <a href="changeStudentPassword.html">Change student password</a>
+        <a th:href="@{~/changeOtherPwd}">Change student password</a>
         <a href="staffChangePassword.html">Change my password</a>
         <a th:href="@{~/create}">Create New User</a>
     </div>
