Stark3 changes about part of controllers

--- a/src/main/resources/templates/Book.html
+++ b/src/main/resources/templates/Book.html
@@ -24,7 +24,7 @@
     <input name="Author" id="Author" type="text" value="">
     <br><br>
     <label style="color: white" for="PublishDate">Publish Date:</label>
-    <input name="PublishDate" id="PublishDate" type="datetime-local" value="">
+    <input name="PublishDate" id="PublishDate" type="date" value="">
     <br><br>
     <button style="float: right" id="Submit" class="Submit" onclick="addToDB()">Add</button>
     <input type="reset">
