--- a/src/main/resources/templates/Literature.html
+++ b/src/main/resources/templates/Literature.html
@@ -27,7 +27,7 @@
     <input name="Author" id="Author" type="text" value="">
     <br><br>
     <label for="PublishDate">Publish Date:</label>
-    <input name="PublishDate" id="PublishDate" type="datetime-local" value="">
+    <input name="PublishDate" id="PublishDate" type="date" value="">
     <br><br>
     <label for="Period">Period:</label>
     <input name="Period" id="Period" type="text" value="">
