--- a/src/main/resources/templates/staffReturnBook.html
+++ b/src/main/resources/templates/staffReturnBook.html
@@ -99,7 +99,7 @@
 
 <div class="container">
     <div id="header" class="topOfThePage">
-        <h2 style="text-align:left; margin:2%; color:white">Home (Stuff)</h2>
+        <h2 style="text-align:left; margin:2%; color:white">Home (Staff)</h2>
         <button class="accountButton" onclick="openNav()">&#9776; Account</button>
     </div>
     <div id="account" class="accountInfo">
@@ -112,6 +112,8 @@
         <form>
             <label for="input">Please Input the Book ID:</label>
             <input type="text" id="input" name="input"><br><br>
+            <label for="username">Please Input the Username:</label>
+            <input type="text" id="username" name="username"><br><br>
             <p> Please check the status of the book, if damaged, please dispose the book. </p>
             <input type="submit" style="margin-left: 30px;" value="Return">
             <input type="submit" style="margin-left: 300px;" value="Dispose">
