--- a/src/main/resources/templates/studentChangePassword.html
+++ b/src/main/resources/templates/studentChangePassword.html
@@ -111,7 +111,6 @@
     </style>
 </head>
 <body onload="closeNav()">
-<form th:action="@{/changeStudentPassword}" th:method="POST">
 <div class="container">
     <div id="header" class="topOfThePage">
         <h2 style="text-align:left; margin:2%; color:white">Change password</h2>
@@ -119,7 +118,7 @@
     </div>
     <div id="account" class="accountInfo">
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
-        <h5>Username:</h5> <p>admin</p>
+        <h5>Username:</h5> <p class="un"></p>
         <h5>User Type:</h5> <p>student</p>
         <h5>Credit Score:</h5> <p>100</p>
         <h5>Current Borrowed Book(s):</h5> <p>you are not currently borrowing book(s) right now</p>
@@ -127,14 +126,14 @@
     </div>
 
     <div class="menu">
-        <form class="step2">
+        <form class="step2" th:action="@{/changeStudentPassword}" th:method="POST">
             <label for="old_password">Please input your old password:</label>
             <input class="pass_box" type="text" id="old_password" name="old_password"><br><br>
             <label for="new_password">Please input your new password:</label>
             <input class="pass_box" type="text" id="new_password" name="new_password"><br><br>
             <label for="confirm_password">Please confirm your new password:</label>
             <input class="pass_box" type="text" id="confirm_password" name="new_password2">
-            <input id="change_password" name="change" type="button" value="change">
+            <button id="change_password" name="change" type="submit" value="change">Change </button>
         </form>
 
 
