--- a/src/main/resources/templates/Magazine.html
+++ b/src/main/resources/templates/Magazine.html
@@ -28,7 +28,7 @@
     <input name="Author" id="Author" type="text" value="">
     <br><br>
     <label for="PublishDate">Publish Date:</label>
-    <input name="PublishDate" id="PublishDate" type="datetime-local" value="">
+    <input name="PublishDate" id="PublishDate" type="date" value="">
     <br><br>
     <label for="series_name">Series_name:</label>
     <input name="series_name" id="series_name" type="text" value="">
