--- a/src/main/resources/templates/studentMenu.html
+++ b/src/main/resources/templates/studentMenu.html
@@ -113,7 +113,7 @@
         <a href="studentBorrowBook.html">Borrow Book</a>
         <a th:href="@{~/studentReturn}">Return Book</a>
         <a href="extend_return_date.html">Extend Return Date</a>
-        <a href="student_change_password.html">Change Password</a>
+        <a th:href="@{~/changeStudentPassword}">Change Password</a>
     </div>
     <div class="messages" id="message"></div>
 
