extendReturnDateController.java implemented

--- a/src/main/resources/templates/studentMenu.html
+++ b/src/main/resources/templates/studentMenu.html
@@ -112,7 +112,7 @@
     <div class="menu serviceOption">
         <a href="studentBorrowBook.html">Borrow Book</a>
         <a th:href="@{~/studentReturn}">Return Book</a>
-        <a href="extendReturnDate.html">Extend Return Date</a>
+        <a th:href="@{~/extend}">Extend Return Date</a>
         <a href="student_change_password.html">Change Password</a>
     </div>
     <div class="messages" id="message"></div>
