page navigation partially finished.

--- a/src/main/resources/templates/staffChangePassword.html
+++ b/src/main/resources/templates/staffChangePassword.html
@@ -120,7 +120,7 @@
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
         <h5>Username:</h5> <p>admin</p>
         <h5>User Type:</h5> <p>staff</p>
-        <a id="logout" onclick="logout()">Log out</a>
+        <a id="logout" th:href="@{~/login}">Log out</a>
     </div>
 
     <div class="menu">
