--- a/src/main/resources/templates/addBook.html
+++ b/src/main/resources/templates/addBook.html
@@ -114,9 +114,8 @@
     </div>
     <div id="account" class="accountInfo">
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
-        <h5>Username:</h5> <p>admin</p>
-        <h5>User Type:</h5> <p>staff</p>
-        <a id="logout" onclick="logout()">Log out</a>
+        <iframe th:src="@{/info}" width="230" height="400" style="border: none"></iframe>
+        <a id="logout" th:href="@{~/login}">Log out</a>
     </div>
 
     <div class="menu">
