--- a/src/main/resources/templates/extendReturnDate.html
+++ b/src/main/resources/templates/extendReturnDate.html
@@ -48,7 +48,7 @@
         }
 
 
-        .crossButton a {
+        #crossButton {
             padding: 8px 8px 8px 32px;
             text-decoration: none;
             font-size: 30px;
@@ -58,15 +58,18 @@
             cursor: pointer;
         }
 
-        .logout a{
-            padding: 8px 8px 8px 32px;
+        #logout{
+            background-color: #4CAF50;
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: right;
             text-decoration: none;
-            font-size: 30px;
-            color: #818181;
-            display: block;
-            transition: 0.3s;
-        }
+            font-size: 16px;
+            margin: 2rem 2rem;
+            cursor: pointer;
 
+        }
 
         #header {
             transition: margin-left .5s;
@@ -95,11 +98,6 @@
             margin:1rem;
             text-align: right;}
 
-        iframe {
-            width: 80%;
-            height: 20rem;
-            margin: 3rem 3rem;
-        }
 
         .returnToMenu {
             background-color: #4CAF50;
@@ -124,11 +122,8 @@
     </div>
     <div id="account" class="accountInfo">
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
-        <h5>Username:</h5> <p>admin</p>
-        <h5>User Type:</h5> <p>student</p>
-        <h5>Credit Score:</h5> <p>100</p>
-        <h5>Current Borrowed Book(s):</h5> <p>you are not currently borrowing book(s) right now</p>
-        <a id="logout" onclick="logout()">Log out</a>
+        <iframe th:src="@{/info}" width="230" height="400" style="border: none"></iframe>
+        <a id="logout" th:href="@{~/login}">Log out</a>
     </div>
 
     <div class="menu">
@@ -143,7 +138,7 @@
     </div>
 
     <div class="messages" id="message">
-        <button id="returnToMenu" class="returnToMenu" onclick="goToMenu()">Go Back To Menu</button>
+        <a id="returnToMenu" class="returnToMenu" th:href="@{~/login/studentMenu}">Go Back To Menu</a>
     </div>
 
 
@@ -168,9 +163,7 @@
         location.href = "login.html"
     }
 
-    function goToMenu() {
-        location.href = "studentMenu.html"
-    }
+
 
 
 </script>
