--- a/src/main/resources/templates/staffReturnBook.html
+++ b/src/main/resources/templates/staffReturnBook.html
@@ -106,7 +106,7 @@
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
         <h5>Username:</h5> <p>admin</p>
         <h5>User Type:</h5> <p>staff</p>
-        <button id="logout" onclick="logout()">Log out</button>
+        <a id="logout" th:href="@{~/login}">Log out</a>
     </div>
     <div class="menu">
         <form>
