--- a/src/main/resources/templates/studentMenu.html
+++ b/src/main/resources/templates/studentMenu.html
@@ -107,7 +107,7 @@
     <div id="account" class="accountInfo" >
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
         <iframe th:src="@{/info}" width="230" height="400" style="border: none"></iframe>
-        <a id="logout" onclick="logout()">Log out</a>
+        <a id="logout" th:href="@{~/login}">Log out</a>
     </div>
     <div class="menu serviceOption">
         <a href="studentBorrowBook.html">Borrow Book</a>
