--- a/src/main/resources/templates/studentChangePassword.html
+++ b/src/main/resources/templates/studentChangePassword.html
@@ -126,14 +126,14 @@
     </div>
 
     <div class="menu">
-        <form class="step2" th:action="@{/changeStudentPassword}" th:method="POST">
+        <form class="step2" th:action="@{/studentChange}" th:method="POST">
             <label for="old_password">Please input your old password:</label>
-            <input class="pass_box" type="text" id="old_password" name="old_password"><br><br>
+            <input class="pass_box" type="text" id="old_password" name="oldPassword"><br><br>
             <label for="new_password">Please input your new password:</label>
             <input class="pass_box" type="text" id="new_password" name="new_password"><br><br>
             <label for="confirm_password">Please confirm your new password:</label>
             <input class="pass_box" type="text" id="confirm_password" name="new_password2">
-            <button id="change_password" name="change" type="submit" value="change">Change </button>
+            <button id="change_password" type="submit">Change </button>
         </form>
 
 
