--- a/src/main/resources/templates/staffChangePassword.html
+++ b/src/main/resources/templates/staffChangePassword.html
@@ -124,20 +124,21 @@
     </div>
 
     <div class="menu">
-        <form class="step2">
+        <form class="step2" th:action="@{/staffChange}" th:method="POST">
             <label for="old_password">Please input your old password:</label>
             <input class="pass_box" type="text" id="old_password" name="old_password"><br><br>
             <label for="new_password">Please input your new password:</label>
             <input class="pass_box" type="text" id="new_password" name="new_password"><br><br>
             <label for="confirm_password">Please confirm your new password:</label>
-            <input class="pass_box" type="text" id="confirm_password" name="new_password">
-            <input id="change_password" name="change" type="button" value="change">
+            <input class="pass_box" type="text" id="confirm_password" name="new_password2">
+            <button id="change_password" type="submit">Change </button>
         </form>
 
 
     </div>
 
     <div class="messages" id="message">
+        <p class="b" th:text="*{message}" id="sen"></p>
         <button id="returnToMenu" class="returnToMenu" onclick="goToMenu()">Go Back To Menu</button>
     </div>
 
