--- a/src/main/resources/templates/studentMenu.html
+++ b/src/main/resources/templates/studentMenu.html
@@ -112,7 +112,7 @@
     <div class="menu serviceOption">
         <a href="studentBorrowBook.html">Borrow Book</a>
         <a th:href="@{~/studentReturn}">Return Book</a>
-        <a href="extend_return_date.html">Extend Return Date</a>
+        <a th:href="@{~/extend}">Extend Return Date</a>
         <a th:href="@{~/studentChange}">Change Password</a>
     </div>
     <div class="messages" id="message"></div>
