--- a/src/main/resources/templates/changeStudentPassword.html
+++ b/src/main/resources/templates/changeStudentPassword.html
@@ -93,12 +93,12 @@
             display: inline-block;
             color: white;
         }
-
         #me {
             font-size: 16px;
             text-align: center;
             color: white;
         }
+
 
     </style>
 </head>
@@ -118,14 +118,14 @@
         <form th:action="@{/changeOtherPwd}" th:method="POST">
         <label for="userName">Username:</label>
         <input name="userName" id="userName" type="text" value="">
-        <button id="submit" class="submit" onclick="temPassword()">Get Temporary Password</button>
+        <button id="submit" type="submit">Get Temporary Password</button>
         </form>
 
     </div>
 
     <div class="messages" id="message">
-        <p class="b" th:text="*{message}" id="me"></p>
-        <button id="returnToMenu" class="returnToMenu" onclick="goToMenu()">Go Back To Menu</button>
+        <p class="b" id="me" th:text="*{message}"></p>
+        <a id="returnToMenu" class="returnToMenu" th:href="@{~/login/staffMenu}">Go Back To Menu</a>
     </div>
 
 
@@ -150,12 +150,4 @@
         location.href = "login.html"
     }
 
-    function goToMenu() {
-        location.href = "staffMenu.html"
-    }
-
-    function temPassword(){
-        document.getElementById("hidden_message").innerHTML="Temporary Password: _________" +
-            "Please copy it to the students and ask them to reset it on their device"
-    }
 </script>
