--- a/src/main/resources/templates/staffChangePassword.html
+++ b/src/main/resources/templates/staffChangePassword.html
@@ -108,6 +108,13 @@
             color: white;
         }
 
+        #sen {
+            font-size: 16px;
+            text-align: center;
+            color: white;
+
+        }
+
     </style>
 </head>
 <body onload="closeNav()">
@@ -139,7 +146,7 @@
 
     <div class="messages" id="message">
         <p class="b" th:text="*{message}" id="sen"></p>
-        <button id="returnToMenu" class="returnToMenu" onclick="goToMenu()">Go Back To Menu</button>
+        <a id="returnToMenu" class="returnToMenu" th:href="@{~/login/staffMenu}">Go Back To Menu</a>
     </div>
 
 
