--- a/src/main/resources/templates/studentChangePassword.html
+++ b/src/main/resources/templates/studentChangePassword.html
@@ -108,6 +108,12 @@
             color: white;
         }
 
+        #sen {
+            font-size: 16px;
+            text-align: center;
+            color: white;
+        }
+
     </style>
 </head>
 <body onload="closeNav()">
@@ -141,7 +147,7 @@
 
     <div class="messages" id="message">
         <p class="b" th:text="*{message}" id="sen"></p>
-        <button id="returnToMenu" class="returnToMenu" onclick="goToMenu()">Go Back To Menu</button>
+        <a id="returnToMenu" class="returnToMenu" th:href="@{~/login/studentMenu}">Go Back To Menu</a>
     </div>
 
 
@@ -166,9 +172,6 @@
         location.href = "login.html"
     }
 
-    function goToMenu() {
-        location.href = "studentMenu.html"
-    }
 
 
 </script>
