--- a/src/main/resources/templates/extendReturnDate.html
+++ b/src/main/resources/templates/extendReturnDate.html
@@ -111,6 +111,12 @@
             cursor: pointer;
         }
 
+        #sen {
+            font-size: 16px;
+            text-align: center;
+            color: white;
+        }
+
 
     </style>
 </head>
@@ -122,7 +128,7 @@
     </div>
     <div id="account" class="accountInfo">
         <a id="crossButton" class="closebtn" onclick="closeNav()">&times;</a>
-        <iframe th:src="@{/info}" width="230" height="400" style="border: none"></iframe>
+        <iframe th:src="@{/info}" width="230" height="300" style="border: none"></iframe>
         <a id="logout" th:href="@{~/login}">Log out</a>
     </div>
 
